--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div id="root">
         <h1>
-            Food Delivery App
+            Not Rendered
         </h1>
     </div>
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
